backend/infrastructure/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /api/projects
            pathType: Prefix
            backend:
              service:
                name: project-service
                port:
                  number: 8080
          - path: /api/tasks
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8080

# Use:  kubectl port-forward svc/ingress-nginx-controller -n ingress-nginx 8080:80
# to forward requests to the ingress when calling enpoints using Postman locally, for example
